    o #1013170 by das-peter: Fix broken view::preview which was broken on #1001542.
    o #452384 by sammys: Another PHP 5.3 fix.
    o #696550: Taxonomy validator should always set title when it successfully validates.
    o #839236: Fields named "buttons" would disappear from the rearrange UI due to conflict with the buttons on the form.

  New features
    o #841260: Introduce a field to evaluate math expressions. Relies on CTools 1.7 (not yet released).
    o #727894 by stella: Give stronger classes on exposed widgets for easier theming.
    o #464490 by dereine: Allow links to specify that they are absolute.
    o #317653 by Steven Jones: Allow singular/plural formatting in numeric fields.
    o #397252 by thekevinday: Allow "glossary" type views to do case insensitive searches.
    o #843866 by dagmar: Allow summary views to specify their path rather than assuming the view path all the time.
    o #348975 by dereine: Allow cloning of displays.
    o #930714 by brad.bulger: Add aggregator GUID field.
    o #785236 by e_log: Add aggregator field item id as a field.
    o #835934 by dereine: Provide relationship from files to users.
    o #935388 by infojunkie: Add post_build and post_execute hooks similar to post_render.
    o #751970 by dereine: View list form auto submit on change.
    o #868972 by dereine: Add a "summary" attribute for accessibility on table and grid styles.
    o #607942 by dashton: Support "rel" attribute in link rewriting.
    o #909332 by dereine: Add col-first and col-last classes to grid style.
    o #368687 by dereine: Allow a relationship from node revision to master node.
    o #867636 by chromix: Give jump menu an option to set default value to current path.
    o #905712 by dagmar: Add Published/Not published as text options to published field.
    o #970514 by moshe, dereine: Provide basic drush integration for views.

Views 2.11 (Jun 16, 2010)
  Bug fixes: